--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "aos": "^2.3.4"
+    "aos": "^2.3.4",
+    "bootstrap": "^4.5.2",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1"
   }
 }
